# atcstt

./: .gitignore  README.md  force.cmd  pyproject.toml  requirements.txt  run.py
docs/: windows-gpu-notes.md
src/atc_asr/: __init__.py  cli.py  console.py  launcher.py  normalization.py  pipeline.py
tests/: test_pipeline.py  test_run.py
